--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "graphql": "^15.5.0",
     "graphql-tag": "^2.12.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
