--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
-  }
+  },
+  "proxy": "https://eduargabriel7-community-server.herokuapp.com/graphql"
 }
