--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2"
   },
-  "proxy": "https://eduargabriel7-community-server.herokuapp.com/graphql"
+  "proxy": "https://eduargabriel7-community-server.herokuapp.com"
 }
